--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@ngrx/effects": "^17.0.1",
+    "@ngrx/signals": "^17.0.1",
     "apexcharts": "^3.45.1",
     "chart.js": "^4.4.1",
     "lunarphase-js": "^2.0.0",
