--- a/angular.json
+++ b/angular.json
@@ -85,6 +85,7 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "less",
+            "codeCoverage": true,  
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -92,7 +93,8 @@
             "styles": [
               "src/styles.less"
             ],
-            "scripts": []
+            "scripts": [],
+            "karmaConfig": "karma.conf.js"
           }
         }
       }
