--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "scan": "sonar-scanner"
   },
   "private": true,
   "dependencies": {
@@ -39,6 +40,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "karma-sonarqube-reporter": "^1.4.0",
+    "sonar-scanner": "^3.1.0",
     "typescript": "~5.2.2"
   }
 }
